--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <meta property="og:title" content="YouTube.com Clone">
     <meta property="og:description" content="A clone of YouTube Home Page using HTML & CSS.">
-    <meta property="og:image" content="https://dionkoult.github.io/youtube-project/icons/youtube-featured.png">
-    <meta property="og:url" content="https://dionkoult.github.io/youtube-project/">
+    <meta property="og:image" content="https://dionkoult.github.io/youtube/icons/youtube-featured.png">
+    <meta property="og:url" content="https://dionkoult.github.io/youtube/">
     <meta property="og:type" content="website">
   </head>
   <body>
@@ -650,4 +650,5 @@
       </section>
     </main>
   </body>
+
 </html>
